<resources>
    <string name="app_name">Mood Diary</string>
    <string name="main_menu_text">Main Menu</string>
    <string name="note_list_open">Notes list</string>
    <string name="statistic_open">Statistic</string>
    <string name="note_edit">Edit</string>
    <string name="add_new_note">New note</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="emotion_stat">Detailed description of the emotional state</string>
    <string name="emotion_category">Emotion</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="chose_emotion">Emotion</string>
    <!--Emotion Status-->
    <string name="happy_emotion">Happy</string>
    <string name="normal_emotion">Normal</string>
    <string name="unhappy_emotion">Unhappy</string>
    <!--Time Range-->
    <string name="morning">Morning(06:00 — 11:59)</string>
    <string name="day">Day(12:00 — 17:59)</string>
    <string name="afternoon">Afternoon(18:00 — 23:50)</string>
    <string name="night">Night(00:00 — 05: 59)</string>
    <string name="hole_day">Hole day(00:00 — 23:59)</string>
    <!--Format-->
    <string name="date_format">DD.MM.YYYY</string>
</resources>