<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".new_note.NewNoteFragment">

    <LinearLayout
        android:id="@+id/new_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:contentDescription="@string/date_format"
                android:ems="10"
                android:hint="@string/date_format"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/spinnerTimeRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/emotion_category"
                android:minHeight="48dp"
                android:visibility="visible" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextMultiLineNoteBody"
                    android:layout_width="match_parent"
                    android:layout_height="310dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/emotion_stat"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/emotion_chooser_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/normal_padding"
                android:text="@string/chose_emotion" />
        </LinearLayout>

    </LinearLayout>

</layout>